<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poker Score Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_profile_message">Select Profile to Delete</string>
    <string name="new_profile">New Game Profile</string>
    <string name="load_profile">Load Profile</string>
    <string name="select_profile_message">Select Profile to Load</string>
    <string name="title_activity_players">Players</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="placeholder">Replace Me!</string>
    <string name="add_player">Add Player</string>
    <string name="add_player_dialog_title">Add</string>
    <string name="add_player_dialog_message">Enter Player Name</string>
    <string name="add_bet">Add Bet</string>
    <string name="title_activity_player_info">Player Information</string>
    <string name="order_by">Order By</string>
    <string name="end_round">End Round</string>
    <string name="pot">Pot</string>
    <string name="last_bet">Last Bet</string>
    <string name="placeholder_int">5</string>
    <string name="center_point">:</string>
    <string name="end_round_dialog_message">Select Round Winner: </string>
    <string name="round_over">Round Over</string>
    <string name="save_profile">Save Profile</string>
    <string name="title_activity_settings">Settings</string>
	<string name="game_id_dialog_title">Save Game Profile</string>  
	<string name="game_id_dialog_message">Enter profile name: </string>  

</resources>
