<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <Button 
        android:id="@+id/add_bet" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_bet"
        android:onClick="addBetDialog" />
    
    <TextView 
        android:id="@+id/center_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/center_point" />
    
    <LinearLayout
        android:id="@+id/last_bet_view"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_toLeftOf="@+id/center_point"
		android:layout_centerVertical="true"
		android:gravity="center_horizontal"
		android:orientation="vertical" >
    
	     <TextView
	        android:id="@+id/last_bet_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/last_bet" />
     
		<TextView
	        android:id="@+id/last_bet_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="40sp"
	        android:text="@string/placeholder_int" />
		
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/pot_view"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@+id/center_point"
		android:layout_centerVertical="true"
		android:gravity="center_horizontal"
		android:orientation="vertical" >
        
		<TextView
	        android:id="@+id/pot_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/pot" />
	        
		<TextView
	        android:id="@+id/pot_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="40sp" />
  
    </LinearLayout>

    
    <Button 
        android:id="@+id/end_round" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/end_round"
        android:onClick="endRoundDialog" />
    
</RelativeLayout>
