<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />
    
    <!-- Once background is designed, make buttons borderless -->
    <Button 
        android:id="@+id/new_profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="startNewProfile"
        android:text="@string/new_profile" />
    
    <Button
        android:id="@+id/load_profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="loadProfile"
        android:text="@string/load_profile" />
    
    <Button
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="showSettings"
        android:text="@string/action_settings" />

</LinearLayout>